@@ -1,4 +1,4 @@
-# Sample defaults file for PyChecker 0.8.10
+# Sample defaults file for PyChecker 0.8.11
 # This file should be called:  .pycheckrc
 # It should be placed in your home directory (value of $HOME).
 # If $HOME is not set, it will look in the current directory.
@@ -81,6 +81,9 @@ unpackSize = 1
 # bool: warn when using strings exceptions or 
 #       other classes not derived from Exception to raise/catch exceptions
 badExceptions = 1
+
+# bool: warn when using a deprecated module or function
+deprecated = 1
 
 # bool: warn when the class attribute does not exist
 classAttrExists = 1
